# tfdetect

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
c_api/: .gitignore  CMakeLists.txt
c_api/cmake/: TensorflowBase.cmake  TensorflowCPUCAPIConfig.cmake.in  build_tensorflow.sh
inc/: tfdetect.h  tfwrapper.h
src/: tfdetect.cpp
